# cambridge-pseudocode-interpreter

./: .gitignore  CMakelists.txt  CpAsciiStringView.c  CpInternalLoggingUtils.c  CpTypeManager.c  CpVariableManager.c  README.md  build.sh  cpi  cpistr.h  go.bat  main.c  makefile  premake5.lua  pseudocode_doc.md
cpi_c/: .gitignore  CMakeLists.txt  bless.c  bless.h  build.zsh  cpi.c  cpi.h  foo.patch  go.bat  ir.c  ir.h  lblcont.c  lblcont.h  lblcont_test.c  main.c  premake5.lua  test.c  vm.c  vm.h
cpi_c_msvc_raddbg/: .main.c.swp  main.c  msvc_raddbg_build.bat
cpi_c_vm/: .gitignore  .main.c.swp  .readme.md.swp  build.sh  cpi  main.c  readme.md
cpi_cpp/: .CMakeLists.txt.swp  CMakeLists.txt  cpi.cpp  cpi.hpp  main.cpp  quickbuild.bat  util.cpp  util.hpp
cpi_cpp/include/: .forth.hpp.swp  forth.hpp
cpi_cpp/src/: diff.txt  forth.cpp  main.cpp
cpi_vm/: .gitignore  Scenario_Tideway_Checkpoint_Security_Day.bat  elaisa_asm.rs  elaisa_executor.c  elaisa_platform_boilerplate.c  elaisa_utils.c  main.c
dep/: main.c  tree.c
dep/cpistr/: cpistr.c  cpistr.h  main.c  makefile
dep/tree/: coord2d.c  coord2d.h  main.c  makefile  stringstack.c  stringstack.h  tree.h  treeprint.h
docs/: index.html
examples/: eg_array_declarations.txt  eg_assignments.txt  eg_comments.txt  eg_constant_declarations.txt  eg_declaration_of_a_custom_type.txt  eg_definition_and_use_of_a_function.txt  eg_example_using_arrays.txt  eg_file_handling_operations.txt  eg_formatted_case_statements.txt  eg_handling_random_files.txt  eg_input_and_output_statements.txt  eg_nested_for_loops.txt  eg_nested_if_statements.txt  eg_passing_parameters_by_reference.txt  eg_repeat_until_statement.txt  eg_uses_of_procedures_with_and_without_paraneters.txt  eg_using_custom_types.txt  eg_variable_declarations.txt  eg_while_loop.txt
src/: coord2d.h  cpi_string.c  main.c  stringstack.h  treeprint.c
src/cpi/: main.c
src/cpi_iee/: cpi_iee.c  cpi_iee.h
src/cpi_string/: cpi_string.h
src/cpistr/: test.c
src/tree/: coord2d.c  stringstack.c
